# ComfyUI-ppm

./: .gitignore  README.md  __init__.py  attention_couple_ppm.py  cascade_utils.py  clip_misc.py  clip_negpip.py  guidance_limiter.py  latent_misc.py  latent_ratio.py  ppm_cfgpp_dyn_sampling.py  ppm_cfgpp_sampling.py  pyproject.toml  random_gen.py  samplers.py  schedulers.py  token_counter.py
.github/workflows/: publish.yml
compat/: advanced_encode.py  module_injector.py  module_locator.py  prompt_control.py  utils.py
dit/: anima_negpip.py  flux_negpip.py  hunyuan_video_negpip.py
example_workflows/: attention_couple+negpip.json  attention_couple_with_global_prompt.json  flux_negpip.json
flux/: flux_negpip.py
js/: attention_couple.js  attention_couple_ppm.js  mask_composite_ppm.js
negpip/: anima_negpip.py
nodes/: attention_couple_ppm.py  cascade_utils.py  clip_misc.py  clip_negpip.py  freeu_adv.py  guidance.py  guidance_limiter.py  latent_misc.py  latent_tonemap.py  misc.py  samplers.py
nodes_ppm/: attention_couple_ppm.py  attention_selector.py  clip_misc.py  clip_negpip.py  freeu_adv.py  guidance.py  latent_misc.py  latent_tonemap.py  misc.py  samplers.py  vae.py
sampling/: ppm_cfgpp_dyn_sampling.py  ppm_cfgpp_sampling.py  ppm_dyn_sampling.py  ppm_sampling.py
src/: schedulers.py
src/attention_couple/: anima_couple.py  common.py  unet_couple.py
src/compat/: utils.py
src/negpip/: anima_negpip.py  unet_negpip.py
src/nodes_ppm/: attention_couple_ppm.py  cads_ppm.py  clip_negpip.py  freeu_adv.py  image_misc.py  misc.py  samplers.py
