[project]
name = "comfyui-ppm"
description = "Fixed AttentionCouple, NegPip(negative weights in prompts) for SDXL, FLUX and HunyuanVideo, more CFG++ and SMEA DY samplers, etc."
version = "1.0.27"
license = { text = "GNU Affero General Public License v3" }

[project.urls]
Repository = "https://github.com/pamparamm/ComfyUI-ppm"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "pamparamm"
DisplayName = "ComfyUI-ppm"
Icon = ""

[tool.ruff]
lint.select = ["S307", "S102", "T", "W", "F"]
