[project]
name = "comfyui-ppm"
description = "Attention Couple for SDXL and Anima; NegPiP (negative weights in prompts) for SDXL and Anima; etc."
version = "1.1.5"
license = { text = "GNU Affero General Public License v3" }

[project.urls]
Repository = "https://github.com/pamparamm/ComfyUI-ppm"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "pamparamm"
DisplayName = "ComfyUI-ppm"
Icon = ""

[tool.ruff]
lint.select = ["S307", "S102", "T", "W", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = [
    "comfy",
    "comfy_api",
    "comfy_extras",
    "nodes",
    "node_helpers",
]

[tool.pyright]
extraPaths = ["../../"]
